[package]
name = "makepad-ttf-parser-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.makepad-ttf-parser]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "parse_ttf"
path = "fuzz_targets/parse_ttf.rs"
test = false
doc = false
